# vectojs

./: .gitignore  .lintstagedrc.json  .markdownlint-cli2.jsonc  .oxfmtrc.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  README.zh-CN.md  SECURITY.md  biome.json  docs  knip.config.ts  lefthook.yml  package.json  tsconfig.json
.carryctx/: README.md  config.toml
.changeset/: a11y-boundless-events.md  a11y-form-projection.md  a11y-lifecycle-batch.md  a11y-sync-throttle.md  add-ui-package.md  animation-system.md  blockquote-overlay-layout.md  bright-lines-copy-logically.md  bright-menus-travel.md  calm-grids-align.md  calm-menus-close.md  calm-overlays-stack.md  calm-pointers-cancel.md  calm-text-projection.md  calm-traces-finalize.md  caret-blink-idle-throttle.md  clean-text-entry.md  clear-dynamic-a11y-state.md  cold-hot-layout-split.md  colorparse-bounded-cache.md  colorparse-css-color4.md  config.json  container-sizing-contract.md  content-projection-virtualization.md  content-projection.md  context-menu-dismiss-and-shortcut-align.md  contextmenu-showatpoint-source-fix.md  contextmenu-submenu-reuse.md  core-engine-decouple.md  core-frame-stats.md  core-primitive-entities.md  devtools-audit-capture.md  devtools-dock-pointer-events.md  devtools-inspector.md  devtools-modern-panel.md  devtools-selection-audit.md  (+84 more)
crates/vectojs-core-rs/: Cargo.toml  build.sh  rust-toolchain.toml
crates/vectojs-core-rs/.cargo/: config.toml
crates/vectojs-core-rs/src/: anim.rs  hit.rs  lib.rs  simd_f32_bench.rs
(+80 files in other folders)
