[package]
name = "vectojs-core-rs"
version = "0.0.0"
edition = "2024"
publish = false
description = "WASM f64/f64x2-SIMD world-transform core for @vectojs/core (invisible backend; the TypeScript path is the permanent fallback)."

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
